--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 				<rect x="42" y="51" opacity="0" width="80" height="80" /> </a>
 			<a xlink:href="https://quiz-monkey.com/lion/lion7.html">
 				<rect x="133" y="190" opacity="0" width="230" height="80" /> </a>
-      <a xlink:href="https://quiz-monkey.com/lion/lion1.html">
+      <a xlink:href="lion1.html">
 				<rect x="826" y="186" opacity="0" width="230" height="80" /> </a>
