--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 				</style>
 			</defs>
-			<image width="1192" height="670" xlink:href="https://i.imgur.com/HCgbeaM.jpg">
+			<image width="1192" height="670" xlink:href="https://i.imgur.com/PTpL7FV.jpg">
 				<title>Who Wants to Recruit Lion </title>
 			</image>
-			<a xlink:href="https://quiz-monkey.com/lion" onclick="alert('+49 (0) 163 139 78 94 ')"> 
+			<a xlink:href="index.html" onclick="alert('+49 (0) 163 139 78 94 ')"> 
 				<rect x="42" y="51" opacity="0" width="80" height="80" /> </a>
-			<a xlink:href="https://quiz-monkey.com/lion/lion7.html">
+			<a xlink:href="lion7.html">
 				<rect x="133" y="190" opacity="0" width="230" height="80" /> </a>
       <a xlink:href="lion1.html">
 				<rect x="826" y="186" opacity="0" width="230" height="80" /> </a>
